--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "string-similarity-js": "^2.1.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
