--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dropzone": "^14.3.5",
     "string-similarity-js": "^2.1.4",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
