--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "@utils/*": ["./utils/*"]
-
+      "@/*": ["./src/*", "./*"],
+      "@utils/*": ["./utils/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
