--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
+    "mailgun.js": "^12.0.3",
     "next": "15.1.7",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
